Norman Personal Web Page

--- a/contact.html
+++ b/contact.html
@@ -77,13 +77,13 @@
                                 <i><svg class="lnr lnr-envelope"><use xlink:href="#lnr-envelope"></use></svg></i>
                             </a>
                         </dt>
-                        <dd class="col-sm-10">lokman@mail.sfsu.edu</dd>
+                        <dd class="col-sm-10">lokmannorman@gmail.com</dd>
                         <dt class="col-sm-2">
                             <a href="https://goo.gl/maps/RcWJuU5hsqLKtUSj7" target="_blank">
                                 <i><svg class="lnr lnr-home"><use xlink:href="#lnr-home"></use></svg></i>
                             </a>
                         </dt>
-                        <dd class="col-sm-10">260 King Street, CA 94107</dd>
+                        <dd class="col-sm-10">San Francisco, CA 94107</dd>
                     </ul>
                 </div>
                 <div class="box">
