--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                     src="static/image/profile.jpg">
             </a>
             <h3>Norman Lo</h3>
-            <h5>Research & Data Analyst</h5>
+            <h5>Economist / Data Scientist</h5>
+            <h5>Adjunct College Instructor</h5>
             <h5>
                 <svg class="octicon octicon-location" viewBox="0 0 12 16" version="1.1" width="12" height="16" aria-hidden="true">
                     <path fill-rule="evenodd" d="M6 0C2.69 0 0 2.5 0 5.5 0 10.02 6 16 6 16s6-5.98 6-10.5C12 2.5 9.31 0 6 0zm0 14.55C4.14 12.52 1 8.44 1 5.5 1 3.02 3.25 1 6 1c1.34 0 2.61.48 3.56 1.36.92.86 1.44 1.97 1.44 3.14 0 2.94-3.14 7.02-5 9.05zM8 5.5c0 1.11-.89 2-2 2-1.11 0-2-.89-2-2 0-1.11.89-2 2-2 1.11 0 2 .89 2 2z"></path>
@@ -60,7 +61,7 @@
             <div class="box">
                 <h1>Norman's Profile</h1>
                 <p>Data scientist with several years of experience in academic research and data analysis. 
-                    Experienced in data management and statistical packages, such as VBA, Python, R, Stata, MatLab, E-View, SQL, and Javascript. 
+                    Experienced in data management and statistical packages, such as Javascript, Python, R, Stata, MatLab, E-View, SQL, and VBA. 
                     Currently enrolled in Berkeley Data Analytic boot camp for keeping up with the recent technology and best practices. 
                     Motivated to bring background in academic research and ability to build econometrics models with visualization to enhance decision-making and achieve company goals.
                 </p>
@@ -75,6 +76,9 @@
                 
                 <h2>Technical Skills</h2>
                 <dl class="row">
+                    <dt class="col-sm-4">Technical Knowledge:</dt>
+                    <dd class="col-sm-8">Regression Model, Catagorical Analysis, Machine Learning, and Big Data Analysis</dd>
+                    
                     <dt class="col-sm-4">Programming Language:</dt>
                     <dd class="col-sm-8">R, Python, Javascript, SQL, noSQL, Stata, E-View, MatLab, HTML, and CSS</dd>
 
@@ -93,10 +97,10 @@
     </div>
 
 
-    <div class="container">
-        <h1>Timeline Visualization</h1>
+    <div class="container-xl px-5">
+        <h2>Timeline Visualization</h2>
     </div>
-    <div class="container">
+    <div class="container-xl px-5">
         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
         <script type="text/javascript">
@@ -141,8 +145,10 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <footer>
-        <div class="footer">Copyright &copy; 2019</div>
+    <footer class="footer py-4">
+        <div class="container-xl px-5">
+            <span>Copyright &copy; 2019</span>
+        </div>
     </footer>
 </body>
 </html>
