--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,8 @@
                     src="static/image/profile.jpg">
             </a>
             <h3>Norman Lo</h3>
-            <h5>Research & Data Analyst</h5>
+            <h5>Economist / Data Scientist</h5>
+            <h5>Adjunct College Instructor</h5>
             <h5>
                 <svg class="octicon octicon-location" viewBox="0 0 12 16" version="1.1" width="12" height="16" aria-hidden="true">
                     <path fill-rule="evenodd" d="M6 0C2.69 0 0 2.5 0 5.5 0 10.02 6 16 6 16s6-5.98 6-10.5C12 2.5 9.31 0 6 0zm0 14.55C4.14 12.52 1 8.44 1 5.5 1 3.02 3.25 1 6 1c1.34 0 2.61.48 3.56 1.36.92.86 1.44 1.97 1.44 3.14 0 2.94-3.14 7.02-5 9.05zM8 5.5c0 1.11-.89 2-2 2-1.11 0-2-.89-2-2 0-1.11.89-2 2-2 1.11 0 2 .89 2 2z"></path>
@@ -56,9 +57,11 @@
         </div>
         <div class="col-12 col-md-8 float-left pl-2">
             <div class="box">
-                <h1>Norman Lo</h1>
-                <div class="media-body">
-                    <h3>General Information</h3>
+                <h1 class="pb-2">Norman Lo</h1>
+                <h4>Feel free to contact me at lokmannorman@gmail.com for any data project.</h4>
+                <h4>I cannot wait to hear about your data project relates to research design, statistical model, data visualization, back end API, building database, front end dashboard, web scraping, or more.</h4>
+                <div class="media-body py-5">
+                    <h3 class="pd-2">General Information</h3>
                     <dl class="row">
                         <dt class="col-sm-2">
                             <a href="https://www.onthisday.com/day/july/4" target="_blank">
@@ -86,9 +89,9 @@
                         <dd class="col-sm-10">San Francisco, CA 94107</dd>
                     </ul>
                 </div>
-                <div class="box">
+                <div class="box py-5">
                     <h3>Social Profile</h3>
-                    <a href="https://www.linkedin.com/in/norman-lo-05496674/" target="_blank" class="btn btn-social mx-2">
+                    <a href="https://www.linkedin.com/in/norman-data-economist/" target="_blank" class="btn btn-social mx-2">
                         <i class="fa fa-linkedin" style="font-size: 30px"></i>
                     </a>
                     <a href="https://github.com/NormanLo4319" target="_blank" class="btn btn-social mx-2">
@@ -103,15 +106,13 @@
         </div>
     </div>
 
-
-
-
-
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <footer>
-        <div class="footer">Copyright &copy; 2019</div>
+    <footer class="footer py-4">
+        <div class="container-xl px-5">
+            <span>Copyright &copy; 2019</span>
+        </div>
     </footer>
 </body>
 </html>
