--- a/work.html
+++ b/work.html
@@ -47,7 +47,8 @@
                     src="static/image/profile.jpg">
             </a>
             <h3>Norman Lo</h3>
-            <h5>Research & Data Analyst</h5>
+            <h5>Economist / Data Scientist</h5>
+            <h5>Adjunct College Instructor</h5>
             <h5>
                 <svg class="octicon octicon-location" viewBox="0 0 12 16" version="1.1" width="12" height="16" aria-hidden="true">
                     <path fill-rule="evenodd" d="M6 0C2.69 0 0 2.5 0 5.5 0 10.02 6 16 6 16s6-5.98 6-10.5C12 2.5 9.31 0 6 0zm0 14.55C4.14 12.52 1 8.44 1 5.5 1 3.02 3.25 1 6 1c1.34 0 2.61.48 3.56 1.36.92.86 1.44 1.97 1.44 3.14 0 2.94-3.14 7.02-5 9.05zM8 5.5c0 1.11-.89 2-2 2-1.11 0-2-.89-2-2 0-1.11.89-2 2-2 1.11 0 2 .89 2 2z"></path>
@@ -62,8 +63,9 @@
                 <h3>Independent Data Analytic Consultant</h3>
                 <p>4+ years of experience in research design, data management, building statistical models, and data analytic works.
                     <ul><strong>Projects:</strong>
+                        <li>Data Product for World Happiness Scores and Gini Coefficient (Back End API & Front End Dashboard)</li>
                         <li>Analyzing Publich Health Scores & Yelp Customer-Based Rating (ETL Work Flow)</li>
-                        <li>Analyzing the Effect of Food Environment to Health Outcomes (Statistical Analysis)</li>
+                        <li>Analyzing the Effect of Food Environment to Health Outcomes (Python Data Analysis)</li>
                         <li>Analyzing the Impact of Market Information on Consumers' Food Choice (Regression Modeling)</li>
                         <li>Summarizing the Effect of Nutrition Label Policy to the Food Industry (Theoritical Modeling)</li>
                     </ul>
@@ -91,10 +93,10 @@
     </div>
 
 
-    <div class="container">
-        <h1>Timeline Visualization</h1>
+    <div class="container-xl px-5">
+        <h2>Timeline Visualization</h2>
     </div>
-    <div class="container">
+    <div class="container-xl px-5">
         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
         <script type="text/javascript">
@@ -139,8 +141,10 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <footer>
-        <div class="footer">Copyright &copy; 2019</div>
+    <footer class="footer py-4">
+        <div class="container-xl px-5">
+            <span>Copyright &copy; 2019</span>
+        </div>
     </footer>
 </body>
 </html>
