--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                 </svg>
                 San Francisco
             </h5>
-            <h5>Visit Date: <script>document.write(new Date().toLocaleDateString());</script></h5>  
+            <h5>Visit Date: <script>document.write(new Date().toLocaleDateString());</script></h5>
+            <h5><a href="static/file/Norman_Resume_2019.pdf">Norman's Resume</a></h5>
         </div>
         <div class="col-12 col-md-8 float-left pl-2">
             <div class="box">
