--- a/project.html
+++ b/project.html
@@ -91,6 +91,7 @@
                 <p>The main objective of this project is to examining the relationship between the food environment and health outcome (obesity & diabetes) at country level. 
                     This project is inspired by the paper <q>Examining the relationship between the food environment and adult diabetes prevalence by county economic and racial composition: 
                     an ecological study</q> (Haynes-Maslow & Leone, Aug 09, 2017), (https://www.ncbi.nlm.nih.gov/pmc/articles/Pmc5551001).</p>
+                <p><a href="https://normanlo4319.github.io/Food-Environment-Web-Page">Project Link</a></p>
                 <p><a href="https://github.com/NormanLo4319/Food-Enviroment-Project">GitHub Project Link</a></p>
                 <img alt width="450" height="300" class="width-full height-full mb-5" src="static/image/Obes_Diab_Rate_Ranked.png">
                 <hr>
