--- a/project.html
+++ b/project.html
@@ -60,6 +60,32 @@
             <div class="box">
                 <h1>Projects Summary</h1>
                 
+                <h2>In-Store Shopping Application</h2>
+                <h2>Created by <a href="https://www.linkedin.com/in/qiqiong-yu-431971185/">Michelle Yu</a> & Norman Lo</h2>
+                <h4>Summary</h4>
+                <p>The project is designed to build a web application that enhances in-store shopping experiences by using different machine learning models.  There are three stages of this project. 
+                    In stage one, we are trying to build an application that can identify picture of an in-store object, so the app can make recommendation to customers shopping.  
+                    For example, the application can make recommendation of recipes based on the food ingredient picture.  The recipe recommendations can also link to the shopping list that related to other ingredients in the store.
+                    In stage two, we are trying to create a registration system that saves customers' age, gender, and ethnicity and use it to evaluate the health risk prediction of the customer into our database. 
+                    Ultimately, we would like to have the recommendation of the recipes related to the health risk of the customer for a healthier food choice.
+                    In the final stage, we would like to build an application that can keep track of the search of the merchandise in store, so the store can understand the popularity of their in-store items and make better economic decision.
+                </p>
+                <p><a href="https://github.com/NormanLo4319/Shopping_App_Project">GitHub Link for the Shopping Application</a></p>
+                <img alt width="800" height="350" class="width-full height-full mb-5" src="static/image/shopping.png">
+                <hr>
+
+                <h2>SF Restaurants Public Health Score Vs. Yelp Consumer-Based Rating</h2>
+                <h4>Summary</h4>
+                <p>How much you know about your favorite restaurant in San Francisco?  In this project, we are tyring to compare Yelp customer-based rating and SF public restaurants scores (cleaness).  
+                    The project is based on ETL workflow., which involves EXTRACTING, TRANSFORMING, and LOADING data. 
+                    We first made the API query from <a href="https://www.yelp.com/developers">Yelp</a> and received 4,050 restaurant rating scores and stored in the SQL database.  We then downloaded the public restaurant scores from 
+                    <a href="https://www.sfdph.org/dph/EH/Food/Score/default.asp">San Francisco Department of Public Health</a> and stored in the SQL database. Once the database is created, we used Pythong SQLAlchemy library to merge the two relational data. 
+                    We used Python Plotly library to create visualization of the data. According to the result, we do not find any strong evidence suggest the correlation bewteen customer-based rating and restaurant scores. 
+                </p>
+                <p><a href="https://github.com/NormanLo4319/Restaurant-Health-Score-vs.-Yelp-Customer-Based-Scores-ETL-Project">GitHub Project Link</a></p>
+                <img alt width="450" height="300" class="width-full height-full mb-5" src="static/image/inspection_scores_vs_yelp_rating.png">
+                <hr>
+
                 <h2>World Happiness Scores & Gini Coefficient</h2>
                 <h4>Summary</h4>
                 <p>In this project, we are trying to create a data product that demonstrates the correlation between 
