--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <h1>Norman's Profile</h1>
                 <p>Data scientist with several years of experience in academic research and data analysis. 
                     Experienced in data management and statistical packages, such as Javascript, Python, R, Stata, MatLab, E-View, SQL, and VBA. 
-                    Currently enrolled in Berkeley Data Analytic boot camp for keeping up with the recent technology and best practices. 
+                    Recently graduated from U.C. Berkeley Data Analytic boot camp for keeping up with the recent technology and best practices. 
                     Motivated to bring background in academic research and ability to build econometrics models with visualization to enhance decision-making and achieve company goals.
                 </p>
                 
