--- a/work.html
+++ b/work.html
@@ -63,6 +63,7 @@
                 <h3>Independent Data Analytic Consultant</h3>
                 <p>4+ years of experience in research design, data management, building statistical models, and data analytic works.
                     <ul><strong>Projects:</strong>
+                        <li>Full Functioning Web/Mobile Shopping Application (Machine Learning Models)</li>
                         <li>Data Product for World Happiness Scores and Gini Coefficient (Back End API & Front End Dashboard)</li>
                         <li>Analyzing Publich Health Scores & Yelp Customer-Based Rating (ETL Work Flow)</li>
                         <li>Analyzing the Effect of Food Environment to Health Outcomes (Python Data Analysis)</li>
