--- a/teach.html
+++ b/teach.html
@@ -65,6 +65,7 @@
                 <ul><strong>Classes:</strong>
                     <li ><a href="http://bulletin.sfsu.edu/courses/econ/">ECON101: Principles of Microeconomics</a></li>
                     <li><a href="http://bulletin.sfsu.edu/courses/econ/">ECON102: Principles of Macroeconomics</a></li>
+                    <li><a href="http://bulletin.sfsu.edu/courses/ds/ds.pdf">DS612: Data Mining with Business Applications</a></li>
                 </ul>
                 
                 <h2><a href="www.usfca.edu">University of San Francisco (USF)</a></h2>
@@ -72,6 +73,7 @@
                 <ul><strong>Classes:</strong>
                     <li ><a href="https://catalog.usfca.edu/preview_course_nopop.php?catoid=4&coid=14191">ECON111: Principles of Microeconomics</a></li>
                     <li><a href="https://www.usfca.edu/catalog/course/112-principles-of-macroeconomics">ECON112: Principles of Macroeconomics</a></li>
+                    <li><a href="https://catalog.usfca.edu/preview_course_nopop.php?catoid=2&coid=4670">ECON120: Economics Methods</a></li>
                     <li><a href="https://www.usfca.edu/arts-sciences/graduate-programs/international-development-economics/program-details/summer-start">ECON190: Principles of Economics</a></li>
                     <li><a href="https://www.usfca.edu/arts-sciences/graduate-programs/international-development-economics/program-details/summer-start">ECON191: Mathematical Economics</a></li>
                 </ul>
@@ -81,7 +83,7 @@
                 <ul><strong>Classes:</strong>
                     <li ><a href="http://www.ccsf.edu/en/educational-programs/ccsf-catalog/courses-by-department/econ-courses.html">ECON3: Principles of Microeconomics</a></li>
                     <li><a href="http://www.ccsf.edu/en/educational-programs/ccsf-catalog/courses-by-department/econ-courses.html">ECON1: Principles of Macroeconomics</a></li>
-                    <li><a href="http://www.ccsf.edu/en/educational-programs/ccsf-catalog/courses-by-department/econ-courses.html">ECON5: Intro. Statistics for Economics, Business, and Social Science</a></li>
+                    <li><a href="http://www.ccsf.edu/en/educational-programs/ccsf-catalog/courses-by-department/econ-courses.html">ECON5: Intro. to Statistics for Economics, Business, and Social Science</a></li>
                 </ul>
                 
                 <h2><a href="www.metrostate.edu">Metropolitan State University (MSU)</a></h2>
