--- a/work.html
+++ b/work.html
@@ -61,7 +61,7 @@
             <div class="box">
                 <h1>Work Experience</h1>
                 <h3>Independent Data Analytic Consultant</h3>
-                <p>4+ years of experience in research design, data management, building statistical models, and data analytic works.
+                <p>4+ years of experience in research design, data management, technical training, statistical models, and data analytic.
                     <ul><strong>Projects:</strong>
                         <li>Full Functioning Web/Mobile Shopping Application (Machine Learning Models)</li>
                         <li>Data Product for World Happiness Scores and Gini Coefficient (Back End API & Front End Dashboard)</li>
@@ -81,6 +81,7 @@
                         <li>Statistics for Economics and Social Science</li>
                         <li>Mathematical Economics</li>
                         <li>Health Economics</li>
+                        <li>Data Mining with Buisness Application</li>
                     </ul>
                 </p>
                 <h3>Equity Program Advisor</h3>
