--- a/work.html
+++ b/work.html
@@ -60,15 +60,15 @@
         <div class="col-12 col-md-8 float-left pl-2">
             <div class="box">
                 <h1>Work Experience</h1>
-                <h3>Independent Data Analytic Consultant</h3>
-                <p>4+ years of experience in research design, data management, technical training, statistical models, and data analytic.
-                    <ul><strong>Projects:</strong>
-                        <li>Full Functioning Web/Mobile Shopping Application (Machine Learning Models)</li>
-                        <li>Data Product for World Happiness Scores and Gini Coefficient (Back End API & Front End Dashboard)</li>
-                        <li>Analyzing Publich Health Scores & Yelp Customer-Based Rating (ETL Work Flow)</li>
-                        <li>Analyzing the Effect of Food Environment to Health Outcomes (Python Data Analysis)</li>
-                        <li>Analyzing the Impact of Market Information on Consumers' Food Choice (Regression Modeling)</li>
-                        <li>Summarizing the Effect of Nutrition Label Policy to the Food Industry (Theoritical Modeling)</li>
+                <h3>Data Scientist / Analyst @ <a href="www.codewithcorgis.com">Code with Corgis</a><h3>
+                <p>1+ years of experience in research design, data management, statistics learning, machine learning, statistical modeling, and data visualization.
+                    <ul><strong>Work Description:</strong>
+                        <li>Support product and leadership teams with insights gained from analyzing company data</li>
+                        <li>Utilizing statistical and machine learning models to drive optimization and improvement of product development and business strategies</li>
+                        <li>Assess the effectiveness and accuracy of new data sources and data gathering techniques</li>
+                        <li>Develop custom data models and algorithms to apply to data set</li>
+                        <li>Using A/B testing framework and test model quality</li>
+                        <li>Develop processes and tools to monitor and analyze model performance and data accuracy</li>
                     </ul>
                 </p>
                 <h3>Adjunct Instructor</h3>
@@ -78,7 +78,7 @@
                         <li>Principles of Microeconomics</li>
                         <li>Principles of Macroeconomics</li>
                         <li>Principles of General Economics</li>
-                        <li>Statistics for Economics and Social Science</li>
+                        <li>Statistics for Economics, Businesses, and Social Science</li>
                         <li>Mathematical Economics</li>
                         <li>Health Economics</li>
                         <li>Data Mining with Buisness Application</li>
@@ -121,11 +121,12 @@
                 [ 'Work',   'Hallmark Cards',                    new Date(2006, 2, 10), new Date(2008, 2, 30) ],
                 [ 'Work',   'First Global',                      new Date(2008, 3, 1), new Date(2009, 10, 30) ],
                 [ 'Work',   'EPIK',                              new Date(2010, 1, 20), new Date(2013, 1, 20) ],
-                [ 'Work',   'SFSU, DVC, USF, CCSF, MSU',         new Date(2015, 8, 25), new Date(2019, 5, 25) ],
+                [ 'Work',   'SFSU, DVC, USF, CCSF, MSU',         new Date(2015, 8, 25), new Date(2019, 12, 01) ],
+                [ 'Work',   'Code with Corgis',                  new Date(2019, 2, 30), new Date(2019, 12, 01) ]
                 [ 'Country',   'U.S.A.',                         new Date(2000, 8, 25), new Date(2005, 10, 1) ],
                 [ 'Country',   'Hong Kong',                      new Date(2005, 10, 3), new Date(2009, 10, 30) ],
                 [ 'Country',   'South Korea',                    new Date(2010, 1, 20), new Date(2013, 1, 20) ],
-                [ 'Country',   'U.S.A.',                         new Date(2013, 1, 22), new Date(2019, 5, 25) ]]);
+                [ 'Country',   'U.S.A.',                         new Date(2013, 1, 22), new Date(2019, 12, 01) ]]);
 
             var options = {
                 timeline: { colorByRowLabel: true }
