--- a/index.html
+++ b/index.html
@@ -124,11 +124,12 @@
                 [ 'Work',   'Hallmark Cards',                    new Date(2006, 2, 10), new Date(2008, 2, 30) ],
                 [ 'Work',   'First Global',                      new Date(2008, 3, 1), new Date(2009, 10, 30) ],
                 [ 'Work',   'EPIK',                              new Date(2010, 1, 20), new Date(2013, 1, 20) ],
-                [ 'Work',   'SFSU, DVC, USF, CCSF, MSU',         new Date(2015, 8, 25), new Date(2019, 5, 25) ],
+                [ 'Work',   'SFSU, DVC, USF, CCSF, MSU',         new Date(2015, 8, 25), new Date(2019, 12, 01) ],
+                [ 'Work',   'Code with Corgis',                  new Date(2019, 2, 01), new Date(2019, 12, 01) ],
                 [ 'Country',   'U.S.A.',                         new Date(2000, 8, 25), new Date(2005, 10, 1) ],
                 [ 'Country',   'Hong Kong',                      new Date(2005, 10, 3), new Date(2009, 10, 30) ],
                 [ 'Country',   'South Korea',                    new Date(2010, 1, 20), new Date(2013, 1, 20) ],
-                [ 'Country',   'U.S.A.',                         new Date(2013, 1, 22), new Date(2019, 5, 25) ]]);
+                [ 'Country',   'U.S.A.',                         new Date(2013, 1, 22), new Date(2019, 12, 01) ]]);
 
             var options = {
                 timeline: { colorByRowLabel: true }
