--- a/work.html
+++ b/work.html
@@ -60,7 +60,7 @@
         <div class="col-12 col-md-8 float-left pl-2">
             <div class="box">
                 <h1>Work Experience</h1>
-                <h3>Data Scientist / Analyst @ <a href="www.codewithcorgis.com">Code with Corgis</a><h3>
+                <h3>Data Scientist / Analyst @ <a href="www.codewithcorgis.com">Code with Corgis</a></h3>
                 <p>1+ years of experience in research design, data management, statistics learning, machine learning, statistical modeling, and data visualization.
                     <ul><strong>Work Description:</strong>
                         <li>Support product and leadership teams with insights gained from analyzing company data</li>
@@ -122,7 +122,7 @@
                 [ 'Work',   'First Global',                      new Date(2008, 3, 1), new Date(2009, 10, 30) ],
                 [ 'Work',   'EPIK',                              new Date(2010, 1, 20), new Date(2013, 1, 20) ],
                 [ 'Work',   'SFSU, DVC, USF, CCSF, MSU',         new Date(2015, 8, 25), new Date(2019, 12, 01) ],
-                [ 'Work',   'Code with Corgis',                  new Date(2019, 2, 30), new Date(2019, 12, 01) ]
+                [ 'Work',   'Code with Corgis',                  new Date(2019, 2, 01), new Date(2019, 12, 01) ],
                 [ 'Country',   'U.S.A.',                         new Date(2000, 8, 25), new Date(2005, 10, 1) ],
                 [ 'Country',   'Hong Kong',                      new Date(2005, 10, 3), new Date(2009, 10, 30) ],
                 [ 'Country',   'South Korea',                    new Date(2010, 1, 20), new Date(2013, 1, 20) ],
