--- a/work.html
+++ b/work.html
@@ -60,7 +60,7 @@
         <div class="col-12 col-md-8 float-left pl-2">
             <div class="box">
                 <h1>Work Experience</h1>
-                <h3>Data Scientist / Analyst @ <a href="http://www.codewithcorgis.com">Code with Corgis</a></h3>
+                <h3>Data Scientist / Analyst @ <a href="http://www.codewithcorgis.com" target="_blank">Code with Corgis</a></h3>
                 <p>1+ years of experience in research design, data management, statistics learning, machine learning, statistical modeling, and data visualization.
                     <ul><strong>Work Description:</strong>
                         <li>Support product and leadership teams with insights gained from analyzing company data</li>
