--- a/work.html
+++ b/work.html
@@ -61,19 +61,20 @@
             <div class="box">
                 <h1>Work Experience</h1>
                 <h3>Data Scientist / Analyst @ <a href="http://www.codewithcorgis.com" target="_blank">Code with Corgis</a></h3>
-                <p>1+ years of experience in research design, data management, statistics learning, machine learning, statistical modeling, and data visualization.
+                <p>Experience in research design, data management, data mining, machine learning, statistical modeling, and data visualization.
                     <ul><strong>Work Description:</strong>
                         <li>Support product and leadership teams with insights gained from analyzing company data</li>
                         <li>Utilizing statistical and machine learning models to drive optimization and improvement of product development and business strategies</li>
                         <li>Assess the effectiveness and accuracy of new data sources and data gathering techniques</li>
-                        <li>Develop custom data models and algorithms to apply to data set</li>
+                        <li>Define relevant metrics that can guide the leadership teams to appropriate and accurate insights</li>
                         <li>Using A/B testing framework and test model quality</li>
-                        <li>Develop processes and tools to monitor and analyze model performance and data accuracy</li>
+                        <li>Build clear and meaningful dashboards and presentations</li>
+                        <li>Communicate clearly and effectively to cross functional partners of varying technical levels</li>
                     </ul>
                 </p>
                 <h3>Adjunct Instructor</h3>
-                <p>4+ years of experience in teaching Economics at college level. Institutions covered San Francisco State University (SFSU), Diablo Valley College (DVC), University of San Francisco (USF), 
-                    City College of San Francisco, and Metropolitan State University (MSU, online courses). 
+                <p>Experience in teaching Economics and Statistics at college level. Institutions covered San Francisco State University (SFSU), Diablo Valley College (DVC), University of San Francisco (USF), 
+                    City College of San Francisco, and Metropolitan State University (MSU, online courses). Guide and develop graduate students’ ability to create successful research project.
                     <ul><strong>Courses:</strong>
                         <li>Principles of Microeconomics</li>
                         <li>Principles of Macroeconomics</li>
