--- a/project.html
+++ b/project.html
@@ -79,8 +79,8 @@
                 <p>In this project, we are trying to create a data product that demonstrates the correlation between 
                     <a href="https://worldhappiness.report/">World Happiness Scores</a> and 
                     <a href="https://data.worldbank.org/indicator/SI.POV.GINI?view=map">Gini Coefficient</a>. 
-                    The data product will have the back end database for API call, which is hosted by Heroku, and the front end dash board to present the visualization and analysis result.
-                    We found statistically significant correlation between the World Happiness Socres and Gini Coefficient in this project, which suggests countries with more equal income distribution has a significant attribution to its Happiness Scores.
+                    The data product will have the back-end database for API call, which is hosted by Heroku, and the front-end dash board to present the visualization and analysis result.
+                    We found statistically significant correlation between the World Happiness Scores and Gini Coefficient in this project, which suggests countries with more equal income distribution has a significant attribution to its Happiness Scores.
                 </p>
                 <p><a href="https://world-happiness-database.herokuapp.com">Back End API Web Page</a></p>
                 <p><a href="https://github.com/NormanLo4319/World_Happiness_Database_API">GitHub Link for Back End Script</a></p>
@@ -90,11 +90,11 @@
 
                 <h2>SF Restaurants Public Health Score Vs. Yelp Consumer-Based Rating</h2>
                 <h4>Summary</h4>
-                <p>How much you know about your favorite restaurant in San Francisco?  In this project, we are tyring to compare Yelp customer-based rating and SF public restaurants scores (cleaness).  
+                <p>How much you know about your favorite restaurant in San Francisco?  In this project, we are tyring to compare Yelp customer-based rating and SF public restaurants scores (cleanness).  
                     The project is based on ETL workflow., which involves EXTRACTING, TRANSFORMING, and LOADING data. 
                     We first made the API query from <a href="https://www.yelp.com/developers">Yelp</a> and received 4,050 restaurant rating scores and stored in the SQL database.  We then downloaded the public restaurant scores from 
                     <a href="https://www.sfdph.org/dph/EH/Food/Score/default.asp">San Francisco Department of Public Health</a> and stored in the SQL database. Once the database is created, we used Pythong SQLAlchemy library to merge the two relational data. 
-                    We used Python Plotly library to create visualization of the data. According to the result, we do not find any strong evidence suggest the correlation bewteen customer-based rating and restaurant scores. 
+                    We used Python Plotly library to create visualization of the data. According to the result, we do not find any strong evidence suggest the correlation between customer-based rating and restaurant scores. 
                 </p>
                 <p><a href="https://github.com/NormanLo4319/Restaurant-Health-Score-vs.-Yelp-Customer-Based-Scores-ETL-Project">GitHub Project Link</a></p>
                 <img alt width="450" height="300" class="width-full height-full mb-5" src="static/image/inspection_scores_vs_yelp_rating.png">
@@ -102,7 +102,7 @@
 
                 <h2>US Food Environment & Health Outcomes</h2>
                 <h4>Summary</h4>
-                <p>The main objective of this project is to examining the relationship between the food environment and health outcome (obesity & diabetes) at country level. 
+                <p>The main objective of this project is to examine the relationship between the food environment and health outcome (obesity & diabetes) at country level. 
                     This project is inspired by the paper <q>Examining the relationship between the food environment and adult diabetes prevalence by county economic and racial composition: 
                     an ecological study</q> (Haynes-Maslow & Leone, Aug 09, 2017), (https://www.ncbi.nlm.nih.gov/pmc/articles/Pmc5551001).</p>
                 <p><a href="https://normanlo4319.github.io/Food-Environment-Web-Page">Project Link</a></p>
@@ -114,8 +114,8 @@
                 <h4>Summary</h4>
                 <p>This paper investigates how informational policy (especially nutrition label) could help improve consumers choice on healthier food purchase. 
                     The statistical analysis is mainly performed on Stata and R. Both multivariate linear regression and logic regression models were applied to this paper.
-                    Not only we found a strong correlation on reading nutrition label and health outcome, we also found statiscal significant evidence on how education attainment will affect the effectiveness use of nutrition label. 
-                    The study extended to find the effectiveness of nutrition lable to different ethicity groups.
+                    Not only we found a strong correlation on reading nutrition label and health outcome, we also found statistical significant evidence on how education attainment will affect the effectiveness use of nutrition label. 
+                    The study extended to find the effectiveness of nutrition label to different ethnicity groups.
                 </p>
                 <p><a href="static/file/Informational_Policy_Improve_Consumers'_Food_Choice.pdf">Download the Paper Here!</a></p>
                 <p><a href="static/file/Informational Policy Improves Consumers’ Choice for Healthier.pptx">Download the Presenation PPT Here!</a></p>
