--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                         <a href=teach.html class="nav-link">Teaching</a>
                     </li>
                     <li class="nav-item">
+                        <a href=data.html class="nav-link">Data Table</a>
+                    </li>
+                    <li class="nav-item">
                         <a href=contact.html class="nav-link">Contact Me</a>
                     </li>
                 </ul>
